--- a/src/main/webapp/welcome.html
+++ b/src/main/webapp/welcome.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>
-        Hello there!
-    </title>
+    <title>Title</title>
 </head>
 <body>
-<h1>Welcome!</h1>
-<p>To jest moja pierwsza aplikacja
-    napisana w Javie EE.</p>
+
 </body>
 </html>
-
